ownDeploy/networksecuritygroup.json
{
    "apiVersion": "2015-05-01-preview",
    "type": "Microsoft.Network/networkSecurityGroups",
    "name": "[parameters('FENSGName')]",
    "location": "[parameters('location')]",
    "properties": {
      "securityRules": [
        {
          "name": "rdp_rule",
          "properties": {
            "description": "Allow RDP",
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "3389",
            "sourceAddressPrefix": "Internet",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 100,
            "direction": "Inbound"
          }
        },
        {
          "name": "web_rule",
          "properties": {
            "description": "Allow WEB",
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "80",
            "sourceAddressPrefix": "Internet",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 101,
            "direction": "Inbound"
          }
        }
      ]
    }
  }
